added twoway binding on sidebarVisibility property for sidebar component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <menus-top-menu (toggle)="onToggle()"></menus-top-menu>
-<menus-side-menu [sidebarVisibility]="sidebarToggled"></menus-side-menu>
+<menus-side-menu [(sidebarVisibility)]="sidebarToggled"></menus-side-menu>
