Added home and macro-form component, and sorted out the basic layout and grids

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <menus-top-menu (toggle)="onToggle()"></menus-top-menu>
+<!-- side-menu also holds the router-outlet -->
 <menus-side-menu [(sidebarVisibility)]="sidebarToggled"></menus-side-menu>
