--- a/src/app/components/menus/top-menu/top-menu.component.html
+++ b/src/app/components/menus/top-menu/top-menu.component.html
@@ -1,4 +1,4 @@
-<div class="ui top attached menu">
+<div class="ui top fixed menu">
   <a class="item" (click)="toggleMenu()">
       <i class="sidebar icon"></i> Menu
   </a>
