--- a/src/app/components/macro-form/macro-form.component.scss
+++ b/src/app/components/macro-form/macro-form.component.scss
@@ -1,3 +1,11 @@
 .ui.input>input {
-    max-width: 60%;
+    max-width: 80%;
+}
+
+.field {
+    max-width: 33%;
+}
+
+.ui.buttons.units {
+    width: 100%;
 }
