--- a/src/app/components/menus/side-menu/side-menu.component.html
+++ b/src/app/components/menus/side-menu/side-menu.component.html
@@ -1,4 +1,4 @@
-<sui-sidebar-container class="ui bottom attached segment">
+<sui-sidebar-container class="ui bottom attached segment" id="sidebar-container">
   <sui-sidebar class="inverted vertical" [isVisible]="sidebarVisibility" (isVisibleChange)="visibilityChanged($event)" #sidebar>
       <a class="item">1</a>
       <a class="item">2</a>
