added macro form component custom validator, checking if sum of percentages is equal to 100

--- a/src/app/components/macro-form/macro-form.component.html
+++ b/src/app/components/macro-form/macro-form.component.html
@@ -53,6 +53,15 @@
         </div>
       </div>
 
+      <div *ngIf="macroForm.errors" class="ui message">
+          <div class="header">
+            Sum of your macro percentages must be 100
+          </div>
+          <p>
+            Current sum: {{ macroForm.errors.currentSum }}%.
+          </p>
+        </div>
+
       <button class="ui primary button" [disabled]="!macroForm.valid">
         Save
       </button>
