--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 
 <div class="ui grid container">
   <div class="row">
-    <h1 class="first">Check My Macro</h1>
+    <h1 class="first">Check My Macros</h1>
     <p>Check My Macro is intented for persons who already have their <b>macronutrients</b> planned out, and wanna plan out their meals or check if a specific recipe or set of recipes fits their macro plan.</p>
   </div>
   <div class="eight wide column">
