- fixed small bug relating to percentage sum validator showing up when grams are chosen as unit of measurement - added some comments on possibly confusing functions - added validator labels to all form fields in macro-form.component.html

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,11 @@
 
 <div class="ui grid container">
+  <!-- App description -->
   <div class="row">
     <h1 class="first">Check My Macros</h1>
-    <p>Check My Macro is intented for persons who already have their <b>macronutrients</b> planned out, and wanna plan out their meals or check if a specific recipe or set of recipes fits their macro plan.</p>
+    <p>Check My Macros is intented for persons who already have their <b>macronutrients</b> planned out, and wanna plan out their meals or check if a specific recipe or set of recipes fits their macro plan.</p>
   </div>
+  <!-- form to enter macros, left side of the page on desktop -->
   <div class="eight wide column">
     <macro-form></macro-form>
   </div>
