added meal-plan-form.component.html it now containsa form to input a natural language recipe and return a simple response about nutrients, just for development purpose i added NutritionResponse.ts class to map the json response from the edamam api to typescript classes/NutritionResponse.ts
there were also minor changes about the page responsivity

--- a/src/app/components/macro-form/macro-form.component.html
+++ b/src/app/components/macro-form/macro-form.component.html
@@ -1,6 +1,6 @@
-<div class="ui grid contaner">
+<div class="ui grid container">
   <div class="row">
-    <h3>Your macro
+    <h3>Your macros
       <ng-container *ngIf="macroSelected">{{': Carbohydrates: ' + selectedCarbsValue + selectedUnitOfMeasurement +
          ' Fats: ' + selectedFatsValue + selectedUnitOfMeasurement + ' Proteins: ' + selectedProteinsValue +selectedUnitOfMeasurement }}
       </ng-container></h3>
