--- a/src/app/components/menus/side-menu/side-menu.component.scss
+++ b/src/app/components/menus/side-menu/side-menu.component.scss
@@ -1,4 +1,4 @@
 // needed due to fixed top menu
-#sidebar-container {
-    margin-top: 40px;
-}
+// #sidebar-container {
+//     margin-top: 40px !important;
+// }
