--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,10 +3,17 @@
   <!-- App description -->
   <div class="row">
     <h1 class="first">Check My Macros</h1>
-    <p>Check My Macros is intented for persons who already have their <b>macronutrients</b> planned out, and wanna plan out their meals or check if a specific recipe or set of recipes fits their macro plan.</p>
+    <p>Check My Macros is intented for persons who already have their <b>macronutrients</b>
+      planned out, and wanna plan out their meals or check if a specific recipe
+      or set of recipes fits their macro plan.</p>
   </div>
-  <!-- form to enter macros, left side of the page on desktop -->
-  <div class="eight wide column">
-    <macro-form></macro-form>
+  <div class="doubling two column row">
+    <div class="column">
+      <!-- form to enter macros, left side of the page on desktop -->
+      <macro-form></macro-form>
+    </div>
+    <div class="column">
+      <meal-plan-form></meal-plan-form>
+    </div>
   </div>
 </div>
