Added EDAMAM API badge to top menus/top-menu/top-menu.component.html
Added a dummy method for food item analysis in nutrition.service.ts

--- a/src/app/components/menus/top-menu/top-menu.component.html
+++ b/src/app/components/menus/top-menu/top-menu.component.html
@@ -2,4 +2,5 @@
   <a class="item" (click)="toggleMenu()">
       <i class="sidebar icon"></i> Menu
   </a>
+  <span class="right" id="edamam-badge" data-color="transparent"></span>
 </div>
