--- a/src/app/components/menus/top-menu/top-menu.component.html
+++ b/src/app/components/menus/top-menu/top-menu.component.html
@@ -2,4 +2,6 @@
   <a class="item" (click)="toggleMenu()">
       <i class="sidebar icon"></i> Menu
   </a>
+  
+  <span class="left" id="edamam-badge" data-color="transparent"></span>
 </div>
