--- a/src/app/components/meal-plan-form/meal-plan-form.component.html
+++ b/src/app/components/meal-plan-form/meal-plan-form.component.html
@@ -1,6 +1,7 @@
 <div class="ui grid container">
   <div class="row">
     <h3>Your meal plan</h3>
+    <em>EDAMAM API allows you to type your meals in natural english, you can copy the meal ingredients from any website, separate the ingredients with new line if possible</em>
   </div>
   <div class="row">
       <form [formGroup]="mealPlanForm" class="ui form"
